Find strings in PDFs that have been broken by a soft hyphen

Currently if a search term in the PDF text has been broken over two
lines by a soft hyphen, find will not correctly identify it as a
match. This is rooted in the fact that the result of FPDF_GetText
includes a marker for soft-hyphens, 0xFFFE, which causes the match to
fail.

This CL adds in filtering this character from the text being
searched over, so that these matches can pass. This requires changes
in the SearchUsingICU method to strip ignorable characters from the
string before searching, and correctly converting the results back
into the non-stripped index space. Ranges also have had filtering for
0xFFFE added in, so that the highlights created by searching are
properly placed.

BUG=chromium:788799

Change-Id: I06c8181358cdebe6454c36437065592820637808
Reviewed-on: https://chromium-review.googlesource.com/1234998
Commit-Queue: Ryan Harrison <rharrison@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Reviewed-by: Henrique Nakashima <hnakashima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593993}
Former-commit-id: 189eca26a74224d31e302bf0075f99cb6b2873f0